# openinspire

./: .gitignore  README.md  pyproject.toml  requirements.txt
openinspire/: core.py  inspire.yml
