[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenINSPIRE"
version = "0.1.0"
description = "A standalone library for downloading and amalgamating INSPIRE land parcels"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Stefan Haselwimmer", email="haselwimmer@gmail.com" }
]
dependencies = [
  "numpy",
  "pyyaml",
  "requests",
  "beautifulsoup4",
  "geopandas",
  "pyarrow",
  "pyogrio",
  "gdal",
  "selenium"
]

[project.scripts]
openinspire = "openinspire.core:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
openinspire = ["*.yml", "*.yaml"]